--- a/css/global.css
+++ b/css/global.css
@@ -1,9 +1,22 @@
-html,body {
-  height: 100%;
-}
-
 body {
-  margin: 0;
+  margin: 10px;
   font-family:"Consolas";
   font-size:18px;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  color: Navy;
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
 }
