--- a/css/accordian.css
+++ b/css/accordian.css
@@ -17,9 +17,9 @@ nav {
 	position: fixed;
 	display: flex;
 	align-items: flex-start;
-	width: 20%;
+	width: 275px;
 	height: 100%;
-	background-color: #111;
+	background-color: #fff2df;
 }
 main {
 	position: fixed;
@@ -46,7 +46,7 @@ p::first-letter {
 }
 li, ul label.title, ul, a {
 	width: 100%;
-	color: #FFF;
+	color: Black;
 	font-family: 'Montserrat', 'Open Sans', sans-serif;
 	display: block;
 	font-weight: bold;
@@ -65,7 +65,7 @@ li {
 }
 label.title {
 	font-size: 14px;
-	background: linear-gradient(#111, #2f2f2f);
+	background-color: #fff2df;
 	padding: 10px 15px;
 	cursor: pointer;
   transition: all .25s;
@@ -83,7 +83,7 @@ a:hover {
   box-shadow: inset 5px 0px 0px 0px #fff;
 }
 label:hover {
-	text-shadow: 0px 0px 10px #fff;
+	text-shadow: 0px 0px 10px Orange;
 }
 input[type="radio"] {
 	display: none;
