--- a/css/accordian.css
+++ b/css/accordian.css
@@ -17,14 +17,14 @@ nav {
 	position: fixed;
 	display: flex;
 	align-items: flex-start;
-	width: 275px;
+	width: 15%;
 	height: 100%;
 	background-color: White;  /* left menu vertical left bar empty space */
 }
 main {
 	position: fixed;
 	right: 0;
-	width: 80%;
+	width: 85%;
 	height: 100%;
 	background-color: White;  /* Right Page */
 	overflow: auto;
@@ -47,9 +47,9 @@ p::first-letter {
 li, ul label.title, ul, a {
 	width: 100%;
 	color: Black;
-	font-family: 'Montserrat', 'Open Sans', sans-serif;
+	font-family: 'Verdana', 'Open Sans', sans-serif;
 	display: block;
-	font-weight: bold;
+	font-weight: none;
 }
 ul label {
 	height: 35px;
@@ -65,18 +65,19 @@ li {
 	background-color: White;  /*  Selected main module topics */
 }
 label.title {
-	font-size: 14px;
+	font-size: 12px;
 	background-color: White;
 	padding: 10px 15px;
 	cursor: pointer;
     transition: all .25s;
+    font-weight: bold;
 }
 a{
 	font-size: 12px;
 	text-decoration: none;
 	color: #Black;
 	display: block;
-	padding: 10px 25px;
+	padding: 5px 25px;
 	transition: all .25s;
 }
 a:hover {
@@ -98,16 +99,16 @@ input[type="radio"] {
 	display: none;
 }
 #welcome:checked + li {
-	height: 140px;
+	height: 120px;
 }
 #installation:checked + li {
-	height: 175px;
+	height: 145px;
 }
 #basicsyntax:checked + li {
-	height: 175px;
+	height: 145px;
 }
 #comments:checked + li {
-	height: 105px;
+	height: 90px;
 }
 i {
 	margin-right: 12px;
