--- a/css/accordian.css
+++ b/css/accordian.css
@@ -40,10 +40,12 @@ p {
 	margin-bottom: 20px;
 	line-height: 26px;
 }
+/*
 p::first-letter {
 	font-size: 200%;
 	font-weight: bold;
 }
+*/
 li, ul label.title, ul, a {
 	width: 100%;
 	color: Black;
