--- a/css/page_layout.css
+++ b/css/page_layout.css
@@ -1,3 +1,10 @@
+			body {
+              margin: 0px;
+              font-family:"Arial";
+              font-size:18px;
+            }
+
+
 			#header{
 				width:100%;
 				height:0px;
@@ -15,6 +22,7 @@
 			}
 
 			#main{
+			    padding: 10px;
 				float:left;
 				width:85%;
 			}
@@ -22,3 +30,15 @@
 			#sidebar-left, #main, #sidebar-right{
 				min-height: 600px
 			}
+
+
+
+p.title {
+  font-size:28px;
+}
+
+img {
+  color: Navy;
+  border-radius: 2px;
+  border: 2px dotted Orange;
+}
